--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -181,8 +181,9 @@ table#dataTable {
 
 .buttonbar {
     display: flex;
-    margin-right: auto; /* Push it to the left */
+    margin-right: auto;
 }
+
 .button-bar button {
     width: 50px;
     height: 50px;
