--- a/tasks/templates/partials/sidebar.html
+++ b/tasks/templates/partials/sidebar.html
@@ -62,13 +62,12 @@
         <li class="nav-item">
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault"><i id="mode-icon"
-                                                                                class="bi bi-brightness-high"></i></label>
+                <label class="form-check-label" for="flexSwitchCheckDefault"><i id="mode-icon" class="bi bi-brightness-high"></i></label>
             </div>
         </li>
     </ul>
     <div class="avatar-name">
-        <img src="{{ user.avatar_url }}" alt="{{ user.username }}'s avatar" class="sidebar-img rounded" style="width: 40px; height: 40px; border-radius: 30px">
+        <img src="{{ user.avatar_url }}" alt="{{ user.username }}'s avatar" class="sidebar-img rounded" style="width: 40px; height: 40px;">
         <h5>{{ user.username }}</h5>
     </div>
 </div>
